--- a/product-service/package.json
+++ b/product-service/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@middy/core": "^2.5.3",
+    "@middy/http-cors": "^3.1.0",
     "@middy/http-json-body-parser": "^2.5.3"
   },
   "devDependencies": {
