--- a/product-service/package.json
+++ b/product-service/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@middy/core": "^2.5.3",
     "@middy/http-cors": "^3.1.0",
-    "@middy/http-json-body-parser": "^2.5.3"
+    "@middy/http-json-body-parser": "^2.5.3",
+    "@types/pg": "^8.6.4",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
@@ -23,6 +25,7 @@
     "serverless": "^3.0.0",
     "serverless-auto-swagger": "^2.8.2",
     "serverless-esbuild": "^1.23.3",
+    "serverless-offline": "^9.0.0",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
