--- a/product-service/package.json
+++ b/product-service/package.json
@@ -13,8 +13,7 @@
     "@middy/core": "^2.5.3",
     "@middy/http-cors": "^3.1.0",
     "@middy/http-json-body-parser": "^2.5.3",
-    "@types/pg": "^8.6.4",
-    "pg": "^8.7.3"
+    "serverless-postgres": "^1.10.3"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
